--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,7 @@ header {
     height: 120vh;
     padding: 20px;
     background-color: #eebe5f;
+    position: relative;
 }
 
 #contato h2 {
@@ -331,8 +332,8 @@ header {
     padding: 10px 30px;
     border-radius: 10px;
 
-    position: relative;
-    top: 90px;
+    position: absolute;
+    top: 55px;
 }
 
 .contato {
@@ -340,7 +341,7 @@ header {
     justify-content: space-evenly;
     align-items: center;
     width: 70%;
-    height: 90vh;
+    height: 95vh;
     padding: 20px;
     outline: 1px solid;
     outline-offset: -10px;
@@ -391,7 +392,7 @@ header {
     border: none;
     outline: none;
     border-radius: 2px;
-    font-size: 1.05em;
+    font-size: 1.02em;
 
 }
 
@@ -428,11 +429,23 @@ header {
     font-size: 1.1em;
     color: black;
     cursor: pointer;
-    transition: all 0.5s ease;
+    transition: all .5s ease;
 }
 
 .btn-agendar-contato:hover {
     color: white;
+}
+
+.agendado {
+    color: #EFB43A;
+    font-size: 1.2em;
+    background-color: #191A1D;
+    padding: 10px 30px;
+    border-radius: 10px;
+
+    position: absolute;
+    bottom: 50px;
+    right: 40vw;
 }
 
 /* Footer */
@@ -443,7 +456,6 @@ footer {
     height: 8vh;
     padding: 10px;
     background-color: #F5F5F5;
-    margin-bottom: 28vh;
 }
 
 footer p {
@@ -456,16 +468,10 @@ footer p {
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    height: 28vh;
     text-align: left;
-    padding: 15px;
+    padding: 10px;
 
-    position: fixed;
-    bottom: 0;
-    left: 0;
-
-    border-radius: 10px 10px 0 0;
-    backdrop-filter: blur(10px);
+    border-radius: 15px 15px 0 0;
     background-color: #00000052;
 }
 
@@ -488,6 +494,11 @@ footer p {
     text-decoration: underline;
 }
 
+.informacoes-site h2::selection,
+.nome-projeto::selection {
+    color: #EFB43A;
+}
+
 .btn-linguagens {
     display: flex;
     flex-direction: column;
@@ -507,10 +518,19 @@ footer p {
     border-radius: 15px;
     border: none;
     cursor: pointer;
+    transition: all .5s ease;
+}
+
+.btn-github:hover {
+    background-color: #191A1D;
 }
 
 .btn-github img {
     width: 60px;
+}
+
+.btn-github:hover img {
+    filter: invert(1);
 }
 
 .linguagens-utilizadas {
@@ -520,12 +540,12 @@ footer p {
 }
 
 .linguagens-utilizadas img {
-    width: 55px;
+    width: 45px;
 }
 
 .mini-barra-vertical {
-    width: 1px;
-    height: 10vh;
+    width: 2px;
+    height: 8vh;
     margin: 0 5px 0 0;
     background-color: #1D9CCA;
 }
