--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,16 +6,14 @@
     color: white;
 }
 
-body {
+/* body {
     background-color: #191A1D;
-}
+} */
 
 main {
-    background-image: url(https://st2.depositphotos.com/2931363/9695/i/450/depositphotos_96952048-stock-photo-young-handsome-man-in-barbershop.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position-y: -84px;
-    backdrop-filter: brightness(70%) contrast(1.2) saturate(1.5);
+    background: url(../img/fundo.jpg) no-repeat ;
+    background-size: contain;
+    background-position-y: -82px;
 }
 
 /* Header */
@@ -24,35 +22,58 @@ header {
     justify-content: space-around;
     align-items: center;
     padding: 10px;
+    position: relative;
 
-    background-image: url(https://st2.depositphotos.com/2931363/9695/i/450/depositphotos_96952048-stock-photo-young-handsome-man-in-barbershop.jpg); 
-    background-repeat: no-repeat;
+    background: url(../img/fundo.jpg) no-repeat ;
     background-size: 100%;
-    backdrop-filter: blur(10px);
+    
+}
+
+header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, rgba(239, 180, 58, 0.8), rgba(0, 0, 0, 0));
+    filter: blur(35px);
 }
 
 .logo {
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
-.logo img {
-    width: 80px;
-    position: relative;
-    left: 10px;
-    filter: invert(1);
-}
-
-.logo p {
-    font-size: 1.1em;
-    font-weight: 600;
+    & img {
+        width: 78px;
+        position: relative;
+        left: 12px;
+        filter: invert(1);
+        
+    }
+    & p {
+        font-size: 1em;
+        font-weight: 600;
+        position: relative;
+        color: #f5f5f5;
+    }
+    & p::after{
+        content: "";
+        width: 100%;
+        height: 2px;
+        background-color: #EFB43A;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
 }
 
 /* NavBar */
 .navbar {
     display: flex;
     gap: 40px;
+    z-index: 1;
 }
 
 .navbar ul {
