--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,18 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
-
-/* body {
-    background-color: #191A1D;
-} */
 
 main {
     background: url(../img/fundo.jpg) no-repeat ;
     background-size: contain;
-    background-position-y: -82px;
+    background-position-y: -92px;
 }
 
 /* Header */
@@ -21,12 +16,11 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 10px;
+    padding: 20px 10px 10px 10px;
     position: relative;
 
-    background: url(../img/fundo.jpg) no-repeat ;
+    background: url(../img/fundo.jpg) no-repeat;
     background-size: 100%;
-    
 }
 
 header::before {
@@ -36,8 +30,8 @@ header::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to bottom, rgba(239, 180, 58, 0.8), rgba(0, 0, 0, 0));
-    filter: blur(35px);
+    background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.5));
+    filter: blur(25px);
 }
 
 .logo {
@@ -49,12 +43,13 @@ header::before {
         width: 78px;
         position: relative;
         left: 12px;
+        top: 3px;
         filter: invert(1);
-        
     }
     & p {
-        font-size: 1em;
-        font-weight: 600;
+        font-size: 1.2em;
+        font-family: "Outfit";
+        letter-spacing: 2px;
         position: relative;
         color: #f5f5f5;
     }
@@ -72,7 +67,7 @@ header::before {
 /* NavBar */
 .navbar {
     display: flex;
-    gap: 40px;
+    gap: 20px;
     z-index: 1;
 }
 
@@ -81,15 +76,23 @@ header::before {
     align-items: center;
     justify-content: center;
     list-style: none;
-    gap: 20px;
+    gap: 15px;
     font-size: 1em;
     font-weight: 600;
+    font-family: "Roboto Condensed";
+    text-transform: uppercase;
+}
+
+.navbar ul:not(:last-child) {
+    gap: 20px;
 }
 
 .navbar a { text-decoration: none; }
 
 .redes-sociais img {
     width: 40px;
+    height: 40px;
+    border-radius: 35%;
 }
 
 /* Inicio */
