--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,12 +5,6 @@
     color: white;
 }
 
-main {
-    background: url(../img/fundo.jpg) no-repeat ;
-    background-size: contain;
-    background-position-y: -92px;
-}
-
 /* Header */
 header {
     display: flex;
@@ -31,7 +25,7 @@ header::before {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.5));
-    filter: blur(25px);
+    filter: blur(20px);
 }
 
 .logo {
@@ -56,7 +50,7 @@ header::before {
     & p::after{
         content: "";
         width: 100%;
-        height: 2px;
+        height: 1px;
         background-color: #EFB43A;
         position: absolute;
         bottom: 0;
@@ -69,30 +63,26 @@ header::before {
     display: flex;
     gap: 20px;
     z-index: 1;
-}
-
-.navbar ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-    gap: 15px;
-    font-size: 1em;
-    font-weight: 600;
-    font-family: "Roboto Condensed";
-    text-transform: uppercase;
-}
-
-.navbar ul:not(:last-child) {
-    gap: 20px;
-}
-
-.navbar a { text-decoration: none; }
-
-.redes-sociais img {
-    width: 40px;
-    height: 40px;
-    border-radius: 35%;
+    & ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        list-style: none;
+        gap: 15px;
+        font-size: 1em;
+        font-weight: 600;
+        font-family: "Roboto Condensed";
+        text-transform: uppercase;
+    }
+    & ul:not(:last-child) {
+        gap: 20px;
+    }
+    & a { text-decoration: none; }
+    & .redes-sociais img {
+        width: 40px;
+        height: 40px;
+        border-radius: 35%;
+    }
 }
 
 /* Inicio */
@@ -101,32 +91,75 @@ header::before {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
     height: 100vh;
     text-align: center;
+    background: url(../img/fundo.jpg) no-repeat ;
+    background-size: cover;
+    background-position-y: -92px;
+}
+
+#inicio::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ,rgba(0, 0, 0, 0.3));
 }
 
 #inicio h1 {
-    font-size: 2em;
+    font-size: 1.5em;
+    z-index: 1;
+    font-family: "Outfit";
+    font-weight: 400;
 }
 
 .barbearia-nome{
-    font-size: 2.2em;
+    font-size: 1.7em;
+    font-family: "Roboto Condensed";
+    letter-spacing: 3px;
+    font-weight: 600;
+    position: relative;
+}
+
+.barbearia-nome::after{
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #EFB43A;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .btn-servicos-inicio {
     margin-top: 20px;
-    padding: 20px 60px;
+    padding: 13px 40px;
     background-color: #EFB43A;
-    color: black;
+    color: #111;
     text-decoration: none;
-    font-size: 1.5em;
-    outline: 3px solid black;
-    outline-offset: -7px;
-    transition: all 0.5s ease;
+    font-size: 1.4em;
+    font-family: "Outfit";
+    font-weight: 400;
+    letter-spacing: 2px;
+    outline: 2px solid #111;
+    outline-offset: -5px;
+    transition: all 0.3s ease-in-out;
+    z-index: 1;
+}
+
+#inicio h1::selection,
+.barbearia-nome::selection{
+    color: #EFB43A;
+    background-color: #111;
 }
 
 .btn-servicos-inicio:hover {
-    color: white;
+    color: #EFB43A;
+    outline-color: #EFB43A;
+    background-color: #111;
 }
 
 /* Quem Somos */
@@ -140,8 +173,22 @@ header::before {
 }
 
 #quem-somos h2 {
-    color: #b1733e;
-    font-size: 4em;
+    color: #111;
+    font-size: 3.5em;
+    text-align: start;
+    position: relative;
+    margin-left: 10px;
+}
+
+#quem-somos h2::before{
+    content: "";
+    width: 100px;
+    height: auto;
+    background: url(https://png.pngtree.com/png-vector/20220818/ourmid/pngtree-barbershop-pole-decoration-png-image_6115703.png) no-repeat;
+    background-size: 50%;
+    position: absolute;
+    left: -10px;
+    top: 5px;
 }
 
 .sobre {
@@ -155,41 +202,39 @@ header::before {
 }
 
 .images-sobre {
-    width: 50%;
+    width: 40%;
 }
 
 .images-sobre img:nth-child(1){
-    width: 220px;
+    width: 170px;
 
-    position: relative;
-    left: 150px;
+    /* position: relative;
+    left: 150px; */
 }
 .images-sobre img:nth-child(2){
-    width: 220px;
+    width: 170px;
     
-    position: relative;
+    /* position: relative;
     top: 25vh;
-    left: 150px;
+    left: 150px; */
 }
 .images-sobre img:nth-child(3){
-    width: 220px;
+    width: 170px;
 
-    position: relative;
-    left: 150px;
+    /* position: relative;
+    left: 150px; */
 }
-
 .images-sobre img:nth-child(4) {
-    width: 220px;
-    position: relative;
+    width: 170px;
+    /* position: relative;
     right: 300px;
-    bottom: 24.5vh;
+    bottom: 24.5vh; */
 }
 
 .text-sobre {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
     width: 50%;
     gap: 20px;
 }
