--- a/src/css/style.css
+++ b/src/css/style.css
@@ -168,8 +168,8 @@ header::before {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 120vh;
-    padding: 10px 20px;
+    height: 125vh;
+    padding: 20px;
     background-color: #f0f0f0;
 }
 
@@ -282,6 +282,7 @@ header::before {
     font-size: 2em;
     font-family: "Roboto Condensed";
     font-weight: 600;
+    letter-spacing: 2px;
 
     position: relative;
     top: 15px;
@@ -307,10 +308,13 @@ header::before {
 }
 
 .servicos p {
-    font-size: 1.3em;
-    text-align: left;
-    margin-bottom: 12px;
-    margin-top: 5px;
+    font-size: 1.2em;
+    font-family: "Outfit";
+    letter-spacing: 2px;
+}
+
+.servicos div p:last-child {
+    width: 18%;
 }
 
 .barba, .cabelo {
@@ -321,6 +325,10 @@ header::before {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px dotted #EFB43A;
+}
+
+.barba div:not(:last-child), .cabelo div:not(:last-child) {
+    margin-bottom: 12px;
 }
 
 #servicos .barra-vertical {
@@ -335,7 +343,6 @@ header::before {
     position: relative;
     bottom: 35px;
 
-    margin-top: 20px;
     padding: 13px 40px;
     background-color: #EFB43A;
     color: #111;
@@ -360,16 +367,28 @@ header::before {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     height: 120vh;
-    padding: 20px;
-    background-color: #F5F5F5;
+    padding: 25px;
+    background-color: #f0f0f0;
 }
 
 #galeria h2 {
-    color: #b1733e;
-    font-size: 5em;
-    margin-bottom: 30px;
+    color: #EFB43A;
+    font-size: 4.5em;
+    font-family: "Roboto Condensed";
+    letter-spacing: 2px;
+    position: relative;
+}
+
+#galeria h2::after{
+    content: "";
+    width: 100%;
+    height: 3px;
+    background-color: #EFB43A;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 #galeria img {
@@ -397,29 +416,31 @@ header::before {
 }
 
 #contato h2 {
-    color: #EFB43A;
-    font-size: 2em;
+    color: #f5f5f5;
+    font-size: 2.3em;
+    font-family: "Roboto Condensed";
+    letter-spacing: 2px;
     background-color: #191A1D;
     padding: 10px 30px;
     border-radius: 10px;
 
     position: absolute;
-    top: 55px;
+    top: 40px;
 }
 
-.contato {
+.contato-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 70%;
     height: 95vh;
     padding: 20px;
-    outline: 1px solid;
+    outline: 1px solid #EFB43A;
     outline-offset: -10px;
     background-color: #191A1D;
-    margin: auto;
 }
 
+/* Formas de Contato, Endereço, Horário de Atendimento */
 .informacoes-barbearia {
     display: flex;
     flex-direction: column;
@@ -430,22 +451,30 @@ header::before {
 }
 
 .informacoes-barbearia h3 {
-    font-size: 1.6em;
-    margin:  0 0 8px 0;
+    font-size: 1.5em;
+    margin:  0 0 10px 0;
+    font-family: "Roboto Condensed";
+    letter-spacing: 2px;
+    position: relative;
+    text-decoration: 1px underline #EFB43A;
+    text-underline-offset: 4px;
 }
 
 .informacoes-barbearia p {
-    font-size: 1.2em;
+    font-size: 1.1em;
+    font-family: "Outfit";
 }
 
+/* Barra Vertical */
 #contato .barra-vertical {
     width: 2px;
     height: 70vh;
-    background-color: #f5f5f5;
+    background-color: #EFB43A;
     position: relative;
     margin: 20px;
 }
 
+/* Formulário para contato */
 .formulario-contato {
     width: 50%;
     padding: 10px;
@@ -457,18 +486,26 @@ header::before {
 }
 
 .formulario-contato input, select, option, .digite {
-    padding: 10px;
+    padding: 8px;
     margin-bottom: 10px;
-    color: black;
-    border: none;
+    border: 1px solid #eebe5f;
     outline: none;
     border-radius: 2px;
-    font-size: 1.02em;
-
+    font-size: 1.1em;
+    font-family: "Outfit";
+    font-weight: 400;
+    background-color: #111;
+    color: #EFB43A;
 }
 
 .formulario-contato select option:checked {
-    background-color: rgba(53, 39, 11, 0.26);
+    background-color: #EFB43A;
+    color: #111;
+}
+
+.formulario-contato select option {
+    background-color: rgba(239, 179, 58, 0.5);
+    color: #f5f5f5;
 }
 
 .nome-telefone {
@@ -482,29 +519,40 @@ header::before {
 
 .formulario-contato label {
     font-size: 1.3em;
+    font-family: "Roboto Condensed";
+    letter-spacing: 2px;
+    color: #f5f5f5;
+    text-decoration: 1px underline #EFB43A;
+    text-underline-offset: 3px;
+    margin-bottom: 5px;
 }
 
 .digite {
-    height: 20vh;
+    height: 10vh;
     resize: none;
 }
 
 .btn-agendar-contato {
-    width: 30%;
-    padding: 15px 30px;
-    border-radius: 3px;
+    width: 45%;
+    padding: 13px 35px;
     background-color: #EFB43A;
-    outline: 2px solid black;
-    outline-offset: -4px;
+    color: #111;
+    text-decoration: none;
+    font-size: 1.4em;
+    font-family: "Outfit";
+    font-weight: 400;
+    letter-spacing: 2px;
     border: none;
-    font-size: 1.1em;
-    color: black;
+    outline: 2px solid #111;
+    outline-offset: -5px;
+    transition: all 0.3s ease-in-out;
     cursor: pointer;
-    transition: all .5s ease;
 }
 
 .btn-agendar-contato:hover {
-    color: white;
+    color: #EFB43A;
+    outline-color: #EFB43A;
+    background-color: #111;
 }
 
 .agendado {
@@ -525,13 +573,21 @@ footer {
     justify-content: center;
     align-items: center;
     height: 8vh;
-    padding: 10px;
-    background-color: #F5F5F5;
+    padding: 15px;
+    background-color: #111;
 }
 
 footer p {
-    font-size: 1.4em;
-    color: #b1733e;
+    font-size: 1.2em;
+    color: #f5f5f5;
+    font-family: "Outfit";
+}
+
+footer a {
+    text-decoration: none;
+    color: #EFB43A;
+    font-family: "Roboto Condensed";
+    text-transform: capitalize;
 }
 
 .informacoes-site {
@@ -619,4 +675,39 @@ footer p {
     height: 8vh;
     margin: 0 5px 0 0;
     background-color: #1D9CCA;
+}
+
+#tela-carregamento {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 105%;
+    z-index: 100;
+    background-color: #27292c;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+#carregando {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border: 15px solid #111;
+    border-bottom: 15px solid #EFB43A;
+    animation: rotate 1s infinite linear;
+}
+
+@keyframes rotate {
+    front {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+body {
+    overflow: hidden;
 }
