--- a/src/css/style.css
+++ b/src/css/style.css
@@ -423,9 +423,12 @@ header::before {
     background-color: #191A1D;
     padding: 10px 30px;
     border-radius: 10px;
+    text-decoration: 1px underline #EFB43A;
+    text-underline-offset: 5px;
 
     position: absolute;
-    top: 40px;
+    top: 50px;
+    z-index: 10;
 }
 
 .contato-container {
@@ -438,6 +441,7 @@ header::before {
     outline: 1px solid #EFB43A;
     outline-offset: -10px;
     background-color: #191A1D;
+    position: relative;
 }
 
 /* Formas de Contato, Endereço, Horário de Atendimento */
@@ -517,6 +521,12 @@ header::before {
     width: 50%;
 }
 
+.formulario-contato input::selection {
+    background-color: #87866f;
+    color: #EFB43A;
+    border: 1px solid #eebe5f;
+}
+
 .formulario-contato label {
     font-size: 1.3em;
     font-family: "Roboto Condensed";
@@ -555,17 +565,39 @@ header::before {
     background-color: #111;
 }
 
-.agendado {
+.formulario-contato form {
+    position: relative;
+}
+
+#agendar-corte {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    background-color: #191A1D;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#texto-agendado {
+    color: #EFB43A;
+    font-family: "Outfit";
+    font-size: 1.4em;
+    font-weight: 200;
+    letter-spacing: 1px;
+    text-align: center;
+    max-width: 100%;
+}
+
+/* .agendado {
     color: #EFB43A;
     font-size: 1.2em;
-    background-color: #191A1D;
     padding: 10px 30px;
     border-radius: 10px;
-
-    position: absolute;
-    bottom: 50px;
-    right: 40vw;
-}
+} */
 
 /* Footer */
 footer {
@@ -590,7 +622,8 @@ footer a {
     text-transform: capitalize;
 }
 
-.informacoes-site {
+/*? ETC */
+/* .informacoes-site {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -675,6 +708,46 @@ footer a {
     height: 8vh;
     margin: 0 5px 0 0;
     background-color: #1D9CCA;
+} */
+
+.voltar-ao-topo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+}
+
+.voltar-ao-topo.show {
+    display: block;
+}
+
+#return {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    box-shadow: 1px 2px 15px #191919;
+    background-color: #111;
+    transition: all .3s ease-in-out;
+    font-size: 1.5em;
+    outline: 1px solid #EFB43A;
+    outline-offset: -3px;
+}
+
+#return:hover {
+    color: #111;
+    outline: 1px solid #111;
+    background-color: #EFB43A;
+}
+
+.bi-chevron-double-up {
+    color: #EFB43A;
 }
 
 #tela-carregamento {
